fix about us, align items

--- a/src/components/Footer/Footer_one.css
+++ b/src/components/Footer/Footer_one.css
@@ -55,23 +55,6 @@
     color: #999;
   }
 
-  .about__us {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-content: space-around;
-    height: 36px;
-    max-width: max-content;
-    background-color: rgb(33, 33, 33, 0.07);
-    border-radius: 100px;
-    color: #2f2f2f;
-    line-height: 0;
-    margin-left: 175px;
-    font-size: 1rem;
-    padding: 0 1.3em;
-    cursor: pointer;
-  }
-
   .footer__btn {
     align-items: center;
     margin-top: 20px;
@@ -84,6 +67,15 @@
     color: #2f2f2f;
     font-size: 1rem;
     padding: 0 1.3em;
+  }
+
+  .about__us {
+    margin: 0 auto;
+    background-color: rgb(33, 33, 33, 0.07);
+    border-radius: 100px;
+    color: #2f2f2f;
+    cursor: pointer;
+    padding: 9px 1.2em;
   }
 
   .about__us:hover {
@@ -146,12 +138,6 @@
   
   .heart {
     color: #2f2f2f;
-  }
-
-  @media screen and (max-width: 900px) {
-    .about__us {
-        margin-left: 145px;
-    }
   }
   
   @media screen and (min-width: 24.375em) {
